# graph-rag-resume-agent

./: .env.example  .gitignore  CAREERGRAPH_IMPORT_GUIDE.md  CLAUDE.md  COMPLETE.md  COMPLETE_FINAL.md  DEPLOY.md  DEPLOY_HF.md  Dockerfile  FINAL_STATUS.md  IMPLEMENTATION_SUMMARY.md  IMPORT_FROM_CAREERGRAPH.md  KNOWLEDGE_GRAPH_OVERVIEW.md  Makefile  QUICKSTART.md  README.md  README_KNOWLEDGE_GRAPH.md  READY_TO_RUN.md  STATUS.md  STRUCTURE.md  UNIVERSAL_GRAPH.md  app_gradio.py  deploy-cloud-run.sh  deploy-vercel.sh  docker-compose.prod.yml  docker-compose.yml  kaggle_notebook.ipynb  linkedin-knowladge.md  prometheus.yml  requirements.txt  vercel.json
.claude/: settings.local.json
api/: __init__.py  vercel.py
app/: __init__.py  config.py  config_production.py  health.py  logging_config.py  main.py  mcp_server.py  middleware.py  nvidia_api.py  pipeline.py  pipeline_universal.py
docs/: deployment-architecture.md  mcp-integration.md  metadata-extraction-guide.md
plans/: KNOWLEDGE_GRAPH_REDESIGN.md  plan.md
rhythm/: CONTRIBUTING.md  LICENSE  OVERVIEW.md  QUICKSTART.md  README.md  pyproject.toml
rhythm/examples/: demo.py
rhythm/patterns/: __init__.py  basic_4x4.py  breakbeat_chaos.py  core.py  polyrhythmic_flow.py  syncopated_groove.py  visualize.py
rhythm/tests/: test_patterns.py
scripts/: build_embeddings.py  build_graph.py  build_graph_from_careergraph.py  build_graph_from_metadata.py  build_graph_simple.py  build_knowledge_graph.py  build_universal_graph.py  build_vector_index_from_wiki.py  collect_universal.py  demo.py  demo_knowledge_graph.py  deploy_hf.py  enhanced_collection.py  enhanced_ingest.py  import_from_careergraph.py  import_profile_to_neo4j.py  import_universal_graph_to_neo4j.py  ingest_to_neo4j.py  neo4j_free_tier_budget.py  preprocess_careergraph_data.py  production_accuracy_test.py  production_ingest.py  production_server.py  run_career_graph.py  run_collection.py  run_server.py  setup_neo4j.py  test_agent.py  test_integration.py  (+3 more)
(+70 files in other folders)
